# pdf-a-word-desktop

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: build-macos.yml  build-windows.yml
installer/windows/: PdfAWord.iss
research/2026-06-private-ledger/: README.md
samples/: create_accounting_sample_pdf.py  create_visual_comparison.py  ejemplo-contabilidad-parroquia.docx
src/pdf_to_word_app/: __init__.py  __main__.py  app.py  converter.py
tests/: test_converter.py
